2006-07-17  <dmacks@netspace.org>

	* plugins/cvs/Makefile.am:
	* plugins/fileroller/Makefile.am:
	* plugins/test/Makefile.am:
	Incorrect use of Makefile linker flags

2006-07-17  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-con-device.c:
	* src/gnome-cmd-data.c:
	* src/utils.c:
	Added some minor safety precautions for fgets().

	* cofigure.in:
	* data/gnome-commander.spec.in:
	Added glib dependencies (>=2.6.0)

2006-06-27  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-main-menu.c:
	* src/useractions.c:
	* src/useractions.h:
	* src/utils.c:
	* src/utils.h:
	Added new entries ("GNOME Commander on the Web", "Report a Problem") to Help menu

2006-06-26  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-chmod-dialog.c:
	* src/gnome-cmd-chown-dialog.c:
	Fixed problem with refreshing after chown or chmod

	* src/useractions.c:
	i18n

2006-06-15  Magnus Stålnacke  <jemamo@telia.com>

	* pixmaps/internal-viewer.xpm:
	New internal viewer icon.

2006-06-15  Assaf Gordon  <agordon88@gmail.com>

	* pixmaps/internal-viewer.xpm:
	* pixmaps/Makefile.am:
	* src/gnome-cmd-file.c:
	* src/imageloader.c:
	* src/imageloader.h:
	New internal viewer icon.

2006-05-29  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-selector.c:
	Do not hide ext column when selected GNOME_CMD_EXT_DISP_WITH_FNAME ("With filename")

2006-05-28  Dima  <dmitry_ky@ua.fm>

	* src/gnome-cmd-dir-indicator.c:
	Bug fix for crash when cmd dir indicator is empty

2006-05-20  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-cmdline.c:
	* src/gnome-cmd-data.c:
	* src/gnome-cmd-main-win.c:
	* src/gnome-cmd-main-win.h:
	Replaced gnome_cmd_main_win_get_left_fs() and gnome_cmd_main_win_get_right_fs()
	with gnome_cmd_main_win_get_fs()

2006-05-19  Stephanos Manos <stefmanos@gmail.com>

	* data/gnome-commander.spec.in: Fix scrollkeeper database update problem.

2006-05-18  Assaf Gordon  <agordon88@gmail.com>

	* src/libgbiewer/viewer-window.c:
	* src/libgviewer/bm_byte.{c.h}: